temp/objects/Imagine_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Communication_Preference_URL__c</fullName>
        <inlineHelpText>Link to the Communication Preferences Page.</inlineHelpText>
        <label>Communication Preference URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Opt_In_Reply__c</fullName>
        <inlineHelpText>Message sent to contact when they opt into email</inlineHelpText>
        <label>Email Opt In Reply</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out_Reply__c</fullName>
        <inlineHelpText>Message sent to contact when they opt out of email.</inlineHelpText>
        <label>Email Opt Out Reply</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_SMS_Unsub_Text__c</fullName>
        <description>Text at bottom of email or text to allow contact to change communication preferences.</description>
        <label>Email SMS Unsub Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Template_Prefix__c</fullName>
        <inlineHelpText>Classic Email template for used for Mass SMS Outreach Automation. Needs to be template name without language.</inlineHelpText>
        <label>Email Template Prefix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Report__c</fullName>
        <inlineHelpText>The Developer Name for the report of trainings that need to be processed for outreach. Example (Trainings_Starting_in_next_21_Days_Ty2)</inlineHelpText>
        <label>Outreach Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply_Email__c</fullName>
        <inlineHelpText>Reply to Email address to use in Outreach Automation. Must be a validated org wide email address.</inlineHelpText>
        <label>Reply Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SMS_Opt_In_Reply__c</fullName>
        <inlineHelpText>Message sent to contact when they opt into SMS</inlineHelpText>
        <label>SMS Opt In Reply</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMS_Opt_Out_Reply__c</fullName>
        <inlineHelpText>Message sent to contact when they opt out of SMS</inlineHelpText>
        <label>SMS Opt Out Reply</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMS_Template_Prefix__c</fullName>
        <inlineHelpText>Classic Email template for used for Mass Email Outreach Automation. Needs to be template name without language.</inlineHelpText>
        <label>SMS Template Prefix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Imagine Settings</label>
</CustomObject>